# cudaOpenCV

./: CMakeLists.txt  HEAT_eqn_v1.py  LICENSE  build.sh  buildAndrun.sh  mesh_gen_v1.py  run.sh  test.py
data/: frame-0.tif
src/: createTemplates.py  creteTrack.py  plot_res.py  run_track.cpp  run_track_2.cpp  test_cuda.cpp  test_optimized.cpp
